--- a/style.css
+++ b/style.css
@@ -2,4 +2,4 @@ body { background-color: #75F278;}
 
 #nav-table { width: 800px; }
 
-#nav-id {width: 200px ; text-aliogn:center; }
+#nav-id {width: 200px ; text-align:center; }
