--- a/stylee.css
+++ b/stylee.css
@@ -1,3 +1,11 @@
 body {
   background-image: url("https://github.com/jporres/jporres.github.io/blob/master/myBackground.jpg?raw=true");
 }
+
+#nav-table { width: 800px; }
+
+#nav-id {width: 200px ; text-align:center; }
+
+p {
+ color: #FFFFFF;
+}
